# PremierDepot

./: CMakeLists.txt  CourbeCarre  GUISimple  carre.cpp  gui_simple.cpp  makefile
qcustomplot/sharedlib/compilation/: Makefile  Makefile.Debug  Makefile.Release  libqcustomplot.so.2.0.0
qcustomplot/sharedlib/compilation/debug/: moc_qcustomplot.cpp
